@@ -26,6 +26,8 @@ Changes in @NEW@:
       components in the same manner it handles :lib. (CNY-2935)
     * The r.addArchive() method can now extract file contents from
       dpkg .deb files when the data is bzip2-compressed. (CNY-2967)
+    * Promote now uses hasTroves to check to check the completeness of a
+      promote instead of fetching group troves for improved performance.
 
   o Client Changes:
     * Shim commitChangeSet() and getFileContents() calls now fall back to
